
2017-10-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): #446 splitted checks for length and
	  combination of offset and length
	* common.c (cob_external_addr): #445 added supressible warning for EXTERNAL
	  data items that are requested with a smaller size than allocated

2017-09-28  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (cob_screen_get_all): changed backspace to emit beep if
	  entered at start of field, not to act like back-tab (bug #426).

2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler, cob_set_signal): added code for SIGFPE
	  in correspondence to SIGHUP code (+ additional error message);
	  set LCOV_EXCL markers for most of the signal handling

2017-09-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: Check if file ASSIGN field has NULL address and report a
	  runtime error and return status 31

2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_display): implemented DISPLAY ALL "blah" WITH SIZE
	  (bug #428).

2017-09-10  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_display, field_accept): fixed SIZE not working if it
	  was less than the item's length (bug #423).
	* screenio.c: fixed naming style.

2017-09-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_get_all, field_accept): beep instead of
	  wrong-casting characters we currently can't store
	* screenio.c (field_accept): beep on insert if field is already full
	* screenio.c (cob_screen_init): set cursor depending on insert mode
	  to vertical bar cursor (on) or square cursor (off)
	* screenio.c (cob_screen_get_all): fix for handling BACKSPACE,
	  added handling for DELETE and INSERT keys and COB_INSERT_MODE

2017-08-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_init)[_WIN32]: only use GetUsername if HAVE_GETUSERNAME
	  is defined (for example in config.h)
